WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304485
SourceBufferParserWebM will not compile if AV1 is not enabled.
https://bugs.webkit.org/show_bug.cgi?id=304485
Summary
SourceBufferParserWebM will not compile if AV1 is not enabled.
Jean-Yves Avenard [:jya]
Reported
2025-12-19 01:35:32 PST
SourceBufferParserWebM is using tools from AV1UtilitiesCocoa.h but those are only enabled on platforms with AV1
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-12-19 01:49:44 PST
***
Bug 304486
has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 2
2025-12-19 01:50:37 PST
<
rdar://problem/166863150
>
Jean-Yves Avenard [:jya]
Comment 3
2025-12-19 01:52:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55695
EWS
Comment 4
2025-12-19 03:37:02 PST
Committed
304745@main
(25b4c4a5a86d): <
https://commits.webkit.org/304745@main
> Reviewed commits have been landed. Closing PR #55695 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug