SourceBufferParserWebM will not compile if AV1 is not enabled. https://bugs.webkit.org/show_bug.cgi?id=304485 rdar://166863150

Reviewed by Youenn Fablet.

Ensure code conditional on ENABLE(AV1) is only called if ENABLE(AV1) is set.

* Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(WebCore::WebMParser::OnTrackEntry):
(WebCore::WebMParser::VideoTrackData::consumeFrameData):
(WebCore::WebMParser::isSupportedVideoCodec):
(WebCore::SourceBufferParserWebM::isContentTypeSupported):
* Source/WebCore/platform/video-codecs/cocoa/RTCVideoDecoderVTBAV1.mm:
(computeAV1InputFormat):

Canonical link: https://commits.webkit.org/304745@main